# Hydrogen-Music

./: .gitignore  LICENSE  README.md  background.js  package-lock.json  package.json  vite.config.js
.github/workflows/: android-build.yml  ci.yml
.history/: README_20251007102158.md  README_20251008161702.md  README_20251008162029.md  README_20251008162326.md  README_20251008162424.md  background_20251008153231.js  background_20251008153331.js  background_20251008153434.js  background_20251008153514.js  package_20251007150638.json  vite.config_20251008152223.js
.history/src/: App_20251008060319.vue  App_20251008145622.vue  App_20251008145717.vue  main_20251008055643.js  main_20251008152903.js
docs/: plugin-development.md  plugins.md
hydrogen_plugins_core/: index.js
mock/: kugouApiServer.js
plugin-installer/: README.md  install-plugin-system.js
plugin-installer/templates/: PluginSettingsInjection.vue  playerStore.extension.js
plugins/audio-effects/: AudioEffectsSettings.js  index.js  manifest.json
plugins/audio-visualizer/: index.js  main.js  manifest.json
plugins/community.kugou-music/: main.js  manifest.json
plugins/core.feature-showcase/: guide.md  main.js  manifest.json
plugins/core.lyric-visualizer/: main.js  manifest.json
plugins/desktop-lyric/: index.js  manifest.json  plugin.json  runtime.js  settings.js  window.css  window.html  window.js
plugins/examplePlugin/: index.js
scripts/: build-plugin-packages.js
src/: App.vue  desktop-lyric.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+164 files in other folders)
