[package]
name = "hydrogen-music"
version = "0.1.0"
edition = "2021"
description = "Hydrogen Music Tauri application"
authors = ["Hydrogen Music Contributors"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
fs_extra = "1.3"
once_cell = "1.18"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = [
  "dialog-open",
  "path-all",
  "shell-open",
  "window-all"
] }
thiserror = "1.0"
walkdir = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
