[package]
name = "hydrogen-music"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tauri = { version = "1.6", features = [
    "dialog-all",
    "fs-all",
    "path-all",
    "shell-open",
    "window-all"
] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.7", features = ["v4"] }
lofty = { version = "0.18", features = ["ape", "flac", "id3v2", "mp4", "ogg", "vorbis"] }
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }
